tcp-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-app
  labels:
    app: tcp-app
spec:
  selector:
    matchLabels:
      app: tcp-app
  replicas: 1
  template:
    metadata:
      labels:
        app: tcp-app
    spec:
      containers:
      - name: tcp-app
        image: <image_here>
        ports:
          - containerPort: 5000
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5  
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-app
  labels:
    name: tcp-app
spec:
  type: ClusterIP #default
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    # This needs to match the selector in the Deployment
    app: tcp-app
