ingress.yml
---
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
  annotations:
    ingress.appscode.com/type: NodePort
    ingress.appscode.com/use-node-port: "true"
    ingress.appscode.com/replicas: '1'
spec:
  rules:
  - host: kubetest.frks.net
    http:
      nodePort: '32666'
      paths:
      - path: /api
        backend:
          serviceName: flask-app
          servicePort: '5000'
          loadBalanceOn: roundrobin
  - host: <host_here>
    http:
      nodePort: '32666'
      paths:
      - path: /bapi
        backend:
          serviceName: flask-app2
          servicePort: '5000'
          loadBalanceOn: roundrobin
