tcp-ingress.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: frks-tcp-ingress
  namespace: default
  annotations:
    ingress.appscode.com/type: NodePort
    ingress.appscode.com/use-node-port: "true"
    ingress.appscode.com/replicas: '1'
spec:
  rules:
  - host: <host_here>
    tcp:
      nodePort: '32667'
      port: '5000'
      noTLS: true
      backend:
        serviceName: tcp-app
        servicePort: '5000'
        loadBalanceOn: leastconn
